# bootc

./: .cci.jenkinsfile  .dockerignore  .gitignore  .packit.yaml  ADOPTERS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  HACKING.md  MAINTAINERS.md  Makefile  OWNERS  README-design.md  README-devel.md  README.md  build_seed.sh  clippy.toml  deny.toml  ostree-and-containers.md
.copr/: Makefile
.github/: dependabot.yml  labeler.yml  renovate.json5
baseimage/: README.md
blockdev/: Cargo.toml
blockdev/src/: blockdev.rs
blockdev/tests/fixtures/: lsblk.json
bootupd/: .cci.jenkinsfile  .dockerignore  .gitignore  COPYRIGHT  Cargo.toml  Dockerfile.build  Makefile  README-design.md
bootupd/.github/: dependabot.yml
bootupd/.github/ISSUE_TEMPLATE/: release-checklist.md
bootupd/.github/workflows/: ci.yml  cross.yml  rust.yml
bootupd/ci/prow/: Dockerfile
bootupd/contrib/packaging/: bootupd.spec
bootupd/doc/: dependency_decisions.yml
bootupd/src/: bootupd.rs  efi.rs  failpoints.rs  filesystem.rs  filetree.rs  grubconfigs.rs  lib.rs  model_legacy.rs  packagesystem.rs  sha512string.rs
bootupd/src/backend/: mod.rs
bootupd/src/cli/: bootupctl.rs  bootupd.rs  mod.rs
bootupd/src/grub2/: README.md  grub-static-efi.cfg  grub-static-post.cfg
bootupd/tests/e2e-update/: e2e-update.sh
bootupd/tests/fixtures/: example-state-v0-legacy.json  example-state-v0.json  example-status-v0.json
bootupd/tests/kola/: test-bootupd
bootupd/tests/kola/data/: libtest.sh
bootupd/tests/kolainst/: Makefile
bootupd/xtask/src/: main.rs
ci/: Containerfile.c9s  Containerfile.install-fsverity  Dockerfile.ci  Dockerfile.fcos  build-test.sh  clean-gha-runner.sh  container-build-integration.sh  ima.sh  installdeps.sh  integration.sh  prepare-release.sh  priv-integration.sh  run-kola.sh
cli/: Cargo.toml  bootc-generator-stub
cli/src/: main.rs
docs/: .gitignore  _config.yml  book.toml  bootc-images.md  faq.md  index.md  install.md  relationship-particles.md  relationship.md  usage.md
hack/: Containerfile  build.sh  provision-derived.sh
lib/: Cargo.toml  build.rs
lib/src/: async_util.rs  blockdev.rs  bootabletree.rs  bootloader.rs  boundimage.rs  chunking.rs  cli.rs  cmdutils.rs  commit.rs  config.rs  container_utils.rs  containerenv.rs  deploy.rs  diff.rs  docgen.rs  fixture.rs  fsck.rs  generator.rs  globals.rs  glyph.rs  grub-efi.cfg  grub.cfg  hostexec.rs  ignition.rs  ima.rs  image.rs  imgstorage.rs  import.rs  install.rs  integrationtest.rs  isolation.rs  journal.rs  k8sapitypes.rs  kargs.rs  kernel.rs  keyfileext.rs  lib.rs  lints.rs  logging.rs  lsm.rs  (+26 more)
lib/src/container/: buildoci.rs  client.rs  deploy.rs  encapsulate.rs  export.rs  imageproxy.rs  import.rs  mod.rs  oci.rs  ocidir.rs  ociwriter.rs  skopeo.rs  store.rs  unencapsulate.rs  update_detachedmeta.rs
lib/src/fixtures/: spec-only-booted.yaml  spec-ostree-remote.yaml  spec-ostree-to-bootc.yaml  spec-rfe-ostree-deployment.yaml  spec-staged-booted.yaml  spec-staged-rollback.yaml  spec-v1-null.json  spec-v1.yaml  spec-via-local-oci.yaml  spec.yaml
lib/src/install/: 00-defaults.toml  baseline.rs  completion.rs  config.rs  osbuild.rs  osconfig.rs
lib/src/store/: mod.rs  ostree_container.rs
lib/src/systemglue/: mod.rs
lib/src/tar/: export.rs  import.rs  mod.rs  write.rs
lib/tests/it/: fixture.rs  main.rs
lib/tests/it/fixtures/: exampleos-derive-v2.ociarchive
man/: ostree-container-auth.md
manpages-md-extra/: bootc-fetch-apply-updates.service.md  bootc-install-config.md
ostree-ext/: .gitignore  Cargo.toml  README.md  deny.toml
ostree-ext/.github/workflows/: bootc.yml  rust.yml
ostree-ext/ci/: container-build-integration.sh  ima.sh  installdeps.sh  integration.sh  lints.sh  priv-integration.sh  priv-test-cockpit-selinux.sh
ostree-ext/cli/: Cargo.toml
ostree-ext/cli/src/: main.rs
ostree-ext/docs/: questions-and-answers.md
ostree-ext/lib/: Cargo.toml
ostree-ext/lib/src/: async_util.rs  chunking.rs  cli.rs  cmdext.rs  commit.rs  container_utils.rs  diff.rs  fixture.rs  globals.rs  ima.rs  integrationtest.rs  isolation.rs  keyfileext.rs  lib.rs  logging.rs  mountutil.rs  objectsource.rs  ostree_manual.rs  ostree_prepareroot.rs  refescape.rs  repair.rs  statistics.rs  sysroot.rs  tokio_util.rs  variant_utils.rs
ostree-ext/lib/src/container/: client.rs  deploy.rs  encapsulate.rs  export.rs  imageproxy.rs  import.rs  mod.rs  oci.rs  ocidir.rs  ociwriter.rs  skopeo.rs  store.rs  unencapsulate.rs  update_detachedmeta.rs
ostree-ext/lib/src/container/tests/it/: main.rs
ostree-ext/lib/src/container/tests/it/fixtures/: exampleos.tar.zst
ostree-ext/lib/src/tar/: export.rs  import.rs  write.rs
ostree-ext/lib/tests/it/: fixture.rs  main.rs
ostree-ext/lib/tests/it/fixtures/: exampleos-derive.ociarchive
ostree-ext/src/: bootabletree.rs  chunking.rs  cli.rs  commit.rs  container_utils.rs  diff.rs  docgen.rs  fixture.rs  globals.rs  ima.rs  integrationtest.rs  keyfileext.rs  lib.rs  objgv.rs  ostree_prepareroot.rs  refescape.rs  repair.rs  statistics.rs  sysroot.rs  tokio_util.rs  utils.rs  variant_utils.rs
ostree-ext/src/container/: deploy.rs  encapsulate.rs  mod.rs  skopeo.rs  store.rs  unencapsulate.rs  update_detachedmeta.rs
ostree-ext/src/tar/: export.rs  import.rs  write.rs
ostree-ext/src/tests/it/: main.rs
ostree-ext/tests/it/: main.rs
ostree-ext/tests/it/fixtures/: manifest1.json  manifest2.json
system-reinstall-bootc/: Cargo.toml  sample_config.yaml
system-reinstall-bootc/src/: main.rs  podman.rs  prompt.rs  users.rs
system-reinstall-bootc/src/config/: cli.rs  mod.rs
system-reinstall-bootc/tests/fixtures/: loginctl.json
tests-integration/: Cargo.toml  README.md  build-image.fmf  build-tmt.fmf
tests-integration/src/: container.rs  hostpriv.rs  install.rs  runvm.rs  selinux.rs  tests-integration.rs
tests/plugins/: bootc-install.py  pyproject.toml
tmpfiles/: Cargo.toml
tmpfiles/src/: lib.rs
utils/: Cargo.toml
utils/src/: command.rs  iterators.rs  lib.rs  mount.rs  path.rs  tracing_util.rs
xtask/: .gitignore  Cargo.toml
xtask/src/: main.rs  xtask.rs
(+240 files in other folders)
