[package]
name = "bootupd"
description = "Bootloader updater"
license = "Apache-2.0"
version = "0.2.24"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.2"
cap-std-ext = "4.0.3"
camino = { workspace = true, features = ["serde1"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "cargo", "help", "usage", "suggestions"] }
env_logger = "0.11"
fail = { version = "0.5", features = ["failpoints"] }
fn-error-context = { workspace = true }
fs2 = "0.4.3"
hex = "0.4.3"
libc = { workspace = true }
libsystemd = ">= 0.3, < 0.8"
log = "^0.4"
openat = "0.1.20"
openat-ext = ">= 0.2.2, < 0.3.0"
openssl = "^0.10"
os-release = "0.1.0"
regex = "1.10"
rustix = { workspace = true, features = ["process", "fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
widestring = "1.1.0"
walkdir = "2.3.2"

# FIXME uncomment
#[lints]
#workspace = true