[package]
name = "bootc"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/bootc"
readme = "README.md"
publish = false
rust-version = "1.63.0"
default-run = "bootc"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# This list of platforms is not intended to be exclusive, feel free
# to extend it.  But missing a platform will only matter for the case where
# a dependent crate is *only* built on that platform.
platforms = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "powerpc64le-unknown-linux-gnu", "s390x-unknown-linux-gnu", "riscv64gc-unknown-linux-gnu"]

[dependencies]
anyhow = "1.0.82"
bootc-lib = { version = "0.1", path = "../lib" }
clap = "4.5.4"
libc = "0.2.154"
tokio = { version = "1.37.0", features = ["macros"] }
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
