[package]
name = "bootc"
version = "0.1.9"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/bootc"
readme = "README.md"
publish = false
default-run = "bootc"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux.  (In practice, it's unlikely there is a tier3-only Linux dependency)
platforms = ["*-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true }
bootc-lib = { version = "1.0", path = "../lib" }
bootc-utils = { path = "../utils" }
tokio = { workspace = true, features = ["macros"] }
log = "0.4.21"
tracing = { workspace = true }

[lints]
workspace = true
