[package]
description = "bootc implementation"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bootc-lib"
readme = "README.md"
repository = "https://github.com/containers/bootc"
version = "1.1.2"
# For now don't bump this above what is currently shipped in RHEL9;
# also keep in sync with the version in cli.
rust-version = "1.75.0"
build = "build.rs"

include = ["/src", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
anstream = "0.6.13"
anstyle = "1.0.6"
anyhow = { workspace = true }
bootc-utils = { path = "../utils" }
camino = { workspace = true, features = ["serde1"] }
ostree-ext = { version = "0.15.0" }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive","cargo"] }
clap_mangen = { version = "0.2.20", optional = true }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
hex = "^0.4.3"
fn-error-context = { workspace = true }
indicatif = "0.17.8"
libc = { workspace = true }
liboverdrop = "0.1.0"
libsystemd = "0.7"
openssl = "^0.10.64"
regex = "1.10.4"
rustix = { workspace = true }
schemars = { version = "0.8.17", features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_ignored = "0.1.10"
serde_json = { workspace = true }
serde_yaml = "0.9.34"
tokio = { workspace = true, features = ["io-std", "time", "process", "rt", "net"] }
tokio-util = { features = ["io-util"], version = "0.7.10" }
tracing = { workspace = true }
tempfile = { workspace = true }
toml = "0.8.12"
xshell = { version = "0.2.6", optional = true }
uuid = { version = "1.8.0", features = ["v4"] }
tini = "1.3.0"

[dev-dependencies]
indoc = { workspace = true }
similar-asserts = { workspace = true }
static_assertions = { workspace = true }

[features]
default = ["install"]
# This feature enables `bootc install`.  Disable if you always want to use an external installer.
install = []
# Implementation detail of man page generation.
docgen = ["clap_mangen"]

[lints]
workspace = true
