[package]
description = "bootc implementation"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bootc-lib"
readme = "README.md"
repository = "https://github.com/containers/bootc"
version = "1.1.5"
# In general we try to keep this pinned to what's in the latest RHEL9.
# However right now, we bumped to 1.82 as that's what composefs-rs uses.
rust-version = "1.82.0"

include = ["/src", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
anstream = "0.6.13"
anstyle = "1.0.6"
anyhow = { workspace = true }
bootc-utils = { path = "../utils" }
bootc-blockdev = { path = "../blockdev" }
bootc-tmpfiles = { path = "../tmpfiles" }
bootc-sysusers = { path = "../sysusers" }
camino = { workspace = true, features = ["serde1"] }
ostree-ext = { path = "../ostree-ext", features = ["bootc"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive","cargo"] }
clap_mangen = { workspace = true, optional = true }
#composefs = "0.2.0"
composefs = { git = "https://github.com/containers/composefs-rs", rev = "55ae2e9ba72f6afda4887d746e6b98f0a1875ac4" }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
hex = { workspace = true }
fn-error-context = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
libc = { workspace = true }
liboverdrop = "0.1.0"
libsystemd = "0.7"
linkme = "0.3"
openssl = { workspace = true }
regex = "1.10.4"
rustix = { workspace = true }
schemars = { version = "0.8.17", features = ["chrono"] }
serde = { workspace = true, features = ["derive"] }
serde_ignored = "0.1.10"
serde_json = { workspace = true }
serde_yaml = "0.9.34"
tokio = { workspace = true, features = ["io-std", "time", "process", "rt", "net"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
toml = "0.8.12"
xshell = { version = "0.2.6", optional = true }
uuid = { version = "1.8.0", features = ["v4"] }
tini = "1.3.0"
comfy-table = "7.1.1"
thiserror = { workspace = true }
nix = "0.27.1"

[dev-dependencies]
similar-asserts = { workspace = true }
static_assertions = { workspace = true }

[features]
default = ["install-to-disk"]
# This feature enables `bootc install to-disk`, which is considered just a "demo"
# or reference installer; we expect most nontrivial use cases to be using
# `bootc install to-filesystem`.
install-to-disk = []
# This featuares enables `bootc internals publish-rhsm-facts` to integrate with
# Red Hat Subscription Manager
rhsm = []
# Implementation detail of man page generation.
docgen = ["clap_mangen"]

[lints]
workspace = true
