[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for OSTree"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ostree-ext"
readme = "../README.md"
repository = "https://github.com/ostreedev/ostree-rs-ext"
version = "0.15.3"
rust-version = "1.74.0"

[dependencies]
# Note that we re-export the oci-spec types
# that are exported by this crate, so when bumping
# semver here you must also bump our semver.
containers-image-proxy = "0.7.0"
# We re-export this library too.
ostree = { features = ["v2022_6"], version = "0.19.0" }

# Private dependencies
anyhow = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
chrono = { workspace = true }
olpc-cjson = "0.1.1"
clap = { workspace = true, features = ["derive","cargo"] }
clap_mangen = { workspace = true, optional = true }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
flate2 = { features = ["zlib"], default-features = false, version = "1.0.20" }
fn-error-context = { workspace = true }
futures-util = "0.3.13"
gvariant = "0.5.0"
hex = { workspace = true }
io-lifetimes = "2"
indicatif = { workspace = true }
once_cell = "1.9"
libc = { workspace = true }
libsystemd = "0.7.0"
openssl = { workspace = true }
ocidir = "0.3.0"
pin-project = "1.0"
regex = "1.5.4"
rustix = { workspace = true, features = ["fs", "process"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = "0.4.43"
tempfile = { workspace = true }
terminal_size = "0.3"
tokio = { workspace = true, features = ["io-std", "time", "process", "rt", "net"] }
tokio-util = { workspace = true }
tokio-stream = { features = ["sync"], version = "0.1.8" }
tracing = "0.1"
zstd = { version = "0.13.1", features = ["pkg-config"] }
indexmap = { version = "2.2.2", features = ["serde"] }

indoc = { version = "2", optional = true }
xshell = { version = "0.2", optional = true }
similar-asserts = { version = "1.5.0", optional = true }

[dev-dependencies]
quickcheck = "1"
# https://github.com/rust-lang/cargo/issues/2911
# https://github.com/rust-lang/rfcs/pull/1956
ostree-ext = { path = ".", features = ["internal-testing-api"] }

[package.metadata.docs.rs]
features = ["dox"]

[features]
docgen = ["clap_mangen"]
dox = ["ostree/dox"]
internal-testing-api = ["xshell", "indoc", "similar-asserts"]
