[package]
name = "system-reinstall-bootc"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/bootc"
readme = "README.md"
publish = false
# For now don't bump this above what is currently shipped in RHEL9.
rust-version = "1.75.0"

# See https://github.com/coreos/cargo-vendor-filterer
[package.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux.  (In practice, it's unlikely there is a tier3-only Linux dependency)
platforms = ["*-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true }
bootc-utils = { path = "../utils" }
clap = { workspace = true, features = ["derive"] }
dialoguer = "0.11.0"
indoc = { workspace = true }
log = "0.4.21"
openssh-keys = "0.6.4"
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9.22"
tempfile = { workspace = true }
tracing = { workspace = true }
uzers = "0.12.1"
which = "7.0.2"

[lints]
workspace = true
