[package]
name = "bootc-tmpfiles"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
camino = { workspace = true }
fn-error-context = { workspace = true }
cap-std-ext = { version = "4" }
thiserror = { workspace = true }
tempfile = { workspace = true }
bootc-utils = { path = "../utils" }
rustix = { workspace = true }
uzers = "0.12"

[dev-dependencies]
anyhow = { workspace = true }
indoc = { workspace = true }
similar-asserts = { workspace = true }

[lints]
workspace = true
