[package]
name = "bootc-utils"
publish = false
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/bootc"

[dependencies]
anyhow = { workspace = true }
cap-std-ext = { workspace = true, features = ["fs_utf8"] }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process"] }
libc = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }
static_assertions = { workspace = true }

[lints]
workspace = true
