[package]
name = "bootc-utils"
publish = false
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/bootc"

[dependencies]
anyhow = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = "1.3"
tempfile = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process", "rt", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
similar-asserts = { workspace = true }
static_assertions = { workspace = true }

[lints]
workspace = true
