[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
camino = "1.0"
chrono = { version = "0.4.23", default_features = false, features = ["std"] }
fn-error-context = "0.2.0"
tempfile = "3.3"
xshell = { version = "0.2" }
