# See https://github.com/matklad/cargo-xtask
# This is an implementation detail of bootc
[package]
name = "xtask"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/xtask.rs"

[dependencies]
anyhow = "1.0.82"
camino = "1.1"
chrono = { version = "0.4.37", default_features = false, features = ["std"] }
fn-error-context = "0.2.1"
tempfile = "3.10"
mandown = "0.1"
xshell = { version = "0.2" }
