# See https://github.com/matklad/cargo-xtask
# This is an implementation detail of bootc
[package]
name = "xtask"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/xtask.rs"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true, features = ["std"] }
fn-error-context = { workspace = true }
tar = "0.4"
toml = "0.8"
tempfile = { workspace = true }
mandown = "1.0.0"
xshell = { version = "0.2.6" }

[lints]
workspace = true
