[package]
name = "ostree-ext-cli"
version = "0.1.4"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ostreedev/ostree-rs-ext"
readme = "README.md"
publish = false
rust-version = "1.63.0"

[dependencies]
anyhow = "1.0"
ostree-ext = { path = "../lib" }
clap = "3.2"
libc = "0.2.92"
tokio = { version = "1", features = ["macros"] }
log = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.2.17"
