[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for OSTree"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ostree-ext"
readme = "README.md"
repository = "https://github.com/ostreedev/ostree-rs-ext"
version = "0.4.0-alpha.0"

[dependencies]
anyhow = "1.0"
bytes = "1.0.1"
bitflags = "1.3.2"
camino = "1.0.4"
cjson = "0.1.1"
flate2 = { features = ["zlib"], default_features = false, version = "1.0.20" }
fn-error-context = "0.2.0"
futures-util = "0.3.13"
gvariant = "0.4.0"
hex = "0.4.3"
indicatif = "0.16.0"
lazy_static = "1.4.0"
libc = "0.2.92"
maplit = "1.0.2"
nix = "0.22.0"
openat = "0.1.20"
openat-ext = "0.2.0"
openssl = "0.10.33"
ostree = { features = ["v2021_4"], version = "0.13.0" }
phf = { features = ["macros"], version = "0.9.0" }
serde = { features = ["derive"], version = "1.0.125" }
serde_json = "1.0.64"
structopt = "0.3.21"
tar = "0.4.33"
tempfile = "3.2.0"
tokio = { features = ["full"], version = "1" }
tokio-stream = "0.1.5"
tokio-util = { features = ["io"], version = "0.6" }
tracing = "0.1"

[dev-dependencies]
clap = "2.33.3"
indoc = "1.0.3"
sh-inline = "0.1.0"
structopt = "0.3.21"

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["ostree/dox"]
