[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for OSTree"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ostree-ext"
readme = "README.md"
repository = "https://github.com/ostreedev/ostree-rs-ext"
version = "0.6.3"

[dependencies]
anyhow = "1.0"
containers-image-proxy = "0.4.0"

async-compression = { version = "0.3", features = ["gzip", "tokio"] }
bitflags = "1"
camino = "1.0.4"
chrono = "0.4.19"
cjson = "0.1.1"
cap-std-ext = "0.24"
flate2 = { features = ["zlib"], default_features = false, version = "1.0.20" }
fn-error-context = "0.2.0"
futures-util = "0.3.13"
gvariant = "0.4.0"
hex = "0.4.3"
indicatif = "0.16.0"
io-lifetimes = "0.5"
once_cell = "1.9"
libc = "0.2.92"
oci-spec = "0.5.4"
openat = "0.1.20"
openat-ext = "0.2.0"
openssl = "0.10.33"
ostree = { features = ["v2021_5", "cap-std-apis"], version = "0.13.5" }
pin-project = "1.0"
serde = { features = ["derive"], version = "1.0.125" }
serde_json = "1.0.64"
structopt = "0.3.21"
tar = "0.4.38"
tempfile = "3.2.0"
tokio = { features = ["full"], version = "1" }
tokio-util = { features = ["io-util"], version = "0.6.9" }
tracing = "0.1"

[dev-dependencies]
indoc = "1.0.3"
quickcheck = "1"
sh-inline = "0.1.0"
# https://github.com/rust-lang/cargo/issues/2911
# https://github.com/rust-lang/rfcs/pull/1956
ostree-ext = { path = ".", features = ["internal-testing-api"] }

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["ostree/dox"]
internal-testing-api = []
proxy_v0_2_3 = ["containers-image-proxy/proxy_v0_2_3"]
