[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for OSTree"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ostree-ext"
readme = "README.md"
repository = "https://github.com/ostreedev/ostree-rs-ext"
version = "0.12.9"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0"
containers-image-proxy = "0.5.5"
async-compression = { version = "0.4", features = ["gzip", "tokio"] }
camino = "1.0.4"
chrono = "0.4.19"
olpc-cjson = "0.1.1"
clap = { version= "4.2", features = ["derive"] }
clap_mangen = { version = "0.2", optional = true }
cap-std-ext = "3.0"
flate2 = { features = ["zlib"], default_features = false, version = "1.0.20" }
fn-error-context = "0.2.0"
futures-util = "0.3.13"
gvariant = "0.4.0"
hex = "0.4.3"
io-lifetimes = "2"
indicatif = "0.17.0"
once_cell = "1.9"
libc = "0.2.92"
libsystemd = "0.7.0"
openssl = "0.10.33"
ostree = { features = ["v2022_6"], version = "0.19.0" }
pin-project = "1.0"
regex = "1.5.4"
rustix = { version = "0.38", features = ["fs", "process"] }
serde = { features = ["derive"], version = "1.0.125" }
serde_json = "1.0.64"
tar = "0.4.38"
tempfile = "3.2.0"
terminal_size = "0.3"
tokio = { features = ["io-std", "time", "process", "rt", "net"], version = ">= 1.13.0" }
tokio-util = { features = ["io-util"], version = "0.7" }
tokio-stream = { features = ["sync"], version = "0.1.8" }
tracing = "0.1"

indoc = { version = "2", optional = true }
xshell = { version = "0.2", optional = true }

[dev-dependencies]
quickcheck = "1"
# https://github.com/rust-lang/cargo/issues/2911
# https://github.com/rust-lang/rfcs/pull/1956
ostree-ext = { path = ".", features = ["internal-testing-api"] }

[package.metadata.docs.rs]
features = ["dox"]

[features]
docgen = ["clap_mangen"]
dox = ["ostree/dox"]
internal-testing-api = ["xshell", "indoc"]
