[tool.poetry]
name = "bootc-tmt"
version = "0.1.0"
description = "Bootc plugins for TMT"
authors = ["Chris Kyrouac <ckyrouac@redhat.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tmt = "^1.36.1"
testcloud = "^0.9.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Be vewy, vewy stwict, we'we hunting wabbits^Wbugs.
strict = true

# Automagically make imported object part of mypy's view of module's namespace.
implicit_reexport = true

# Make error messages more rich, this helps better targeted waivers.
show_error_codes = true

# Allow mypy to follow imports to get correct picture of type
# annotations across module boundaries.
follow_imports = "normal"

python_version = "3.9"
files = ["./"]

[[tool.mypy.overrides]]
module = [
    # "bugzilla.*",
    # "gssapi.*",
    # "guestfs.*",
    # "html2text.*",
    # "fmf.*",
    # "junit_xml.*",
    # "libvirt.*",
    # "nitrate.*",
    # "pylero.*",
    # "testcloud.*",
    # "mrack.*",
    ]
ignore_missing_imports = true
